--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 <body>
 	<h1>おれのp5.js</h1>
 	<li><a href="./01_ellipseart.html">1: frameCountを使って楕円を加筆していくアニメーション</a></li>
+	<li><a href="./02_bubble.html">2: バブル表現的なやつ</a></li>
 </body>
 
 </html>
