--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 	<h1>おれのp5.js</h1>
 	<li><a href="./01_ellipseart.html">1: frameCountを使って楕円を加筆していくアニメーション</a></li>
 	<li><a href="./02_bubble.html">2: バブル表現的なやつ</a></li>
+	<li><a href="./03_sound_key_typed_play.html">3: キーボートを押したら音楽が再生するやつ</a></li>
 </body>
 
 </html>
