--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet href=" ./assets/tailwind/tailwind.css">
 	<title>おれのp5.js</title>
 </head>
 
@@ -11,6 +12,7 @@
 	<li><a href="./01_ellipseart.html">1: frameCountを使って楕円を加筆していくアニメーション</a></li>
 	<li><a href="./02_bubble.html">2: バブル表現的なやつ</a></li>
 	<li><a href="./03_sound_key_typed_play.html">3: キーボートを押したら音楽が再生するやつ</a></li>
+	<p class="text-2xl font-bold text-center my-4"> Parcel and Tailwind says hello!</p>
 </body>
 
 </html>
