--- a/src/02_bubble.html
+++ b/src/02_bubble.html
@@ -9,7 +9,7 @@
 			margin: 0;
 		}
 	</style>
-	<script src="02_bubble.ts"></script>
+	<script type="module" src="02_bubble.ts"></script>
 </head>
 
 <body>
