--- a/src/03_sound_key_typed_play.html
+++ b/src/03_sound_key_typed_play.html
@@ -4,16 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>03_sound_key_typed_play</title>
-	<style>
-		body {
-			margin: 0;
-		}
-	</style>
-	<script src="03_sound_key_typed_play.ts"></script>
+	<script type="module" src="03_sound_key_typed_play.ts"></script>
 </head>
 
 <body>
-
 </body>
 
 </html>
