--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet href=" ./assets/tailwind/tailwind.css">
+	<link rel="stylesheet" href="./assets/tailwind/tailwind.css">
 	<title>おれのp5.js</title>
 </head>
 
 <body>
-	<h1>おれのp5.js</h1>
-	<li><a href="./01_ellipseart.html">1: frameCountを使って楕円を加筆していくアニメーション</a></li>
-	<li><a href="./02_bubble.html">2: バブル表現的なやつ</a></li>
-	<li><a href="./03_sound_key_typed_play.html">3: キーボートを押したら音楽が再生するやつ</a></li>
-	<p class="text-2xl font-bold text-center my-4"> Parcel and Tailwind says hello!</p>
+	<h1 class="text-4xl text-green-700 text-center font-semibold">おれのp5.js</h1>
+	<br>
+	<button class="bg-green-700 btn"><a href="./01_ellipseart.html">1: frameCountを使って楕円を加筆していくアニメーション</a></button>
+	<button class="bg-green-700 btn"><a href="./02_bubble.html">2: バブル表現的なやつ</a></button>
+	<button class="bg-green-700 btn"><a href="./03_sound_key_typed_play.html">3: キーボートを押したら音楽が再生するやつ</a></button>
+
+	<div>音楽:<a href="https://maou.audio/"> 魔王魂</a></div>
 </body>
 
 </html>
