--- a/src/01_ellipseart.html
+++ b/src/01_ellipseart.html
@@ -9,7 +9,7 @@
 			margin: 0;
 		}
 	</style>
-	<script type="module" src="01_ellipseart.ts"></script>
+	<script type="module" src="./01_ellipseart.ts"></script>
 </head>
 
 <body>
