--- a/src/03_sound_key_typed_play.html
+++ b/src/03_sound_key_typed_play.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>03_sound_key_typed_play</title>
-	<script type="module" src="03_sound_key_typed_play.ts"></script>
+	<script type="module" src="./03_sound_key_typed_play.ts"></script>
 </head>
 
 <body>
