update: index.html style

--- a/src/03_sound_key_typed_play.html
+++ b/src/03_sound_key_typed_play.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+	<div class='w-10 h-10 leading-10 text-center'>
+		<img src="../static/gopher-emon.svg">
+	</div>
 </body>
 
 </html>
