--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,30 @@
 <body>
 	<h1 class="text-4xl text-green-700 text-center font-semibold">おれのp5.js</h1>
 	<br>
-	<button class="bg-green-700 btn"><a href="./01_ellipseart.html">1: frameCountを使って楕円を加筆していくアニメーション</a></button>
-	<button class="bg-green-700 btn"><a href="./02_bubble.html">2: バブル表現的なやつ</a></button>
-	<button class="bg-green-700 btn"><a href="./03_sound_key_typed_play.html">3: キーボートを押したら音楽が再生するやつ</a></button>
+	<div class="flex content-center flex-wrap bg-gray-200 h-48">
+		<div class="w-1/3 p-2">
+			<div class="text-gray-700 text-center bg-gray-400 p-2">
+				<a href="./01_ellipseart.html">frameCountを使って楕円を加筆していくアニメーション</a>
+			</div>
+		</div>
+		<div class="w-1/3 p-2">
+			<div class="text-gray-700 text-center bg-gray-400 p-2">
+				<a href="./02_bubble.html">バブル表現的なやつ</a>
+			</div>
+		</div>
+		<div class="w-1/3 p-2">
+			<div class="text-gray-700 text-center bg-gray-400 p-2">
+				<a href="./03_sound_key_typed_play.html">キーボートを押したら音楽が再生するやつ</a>
+			</div>
+		</div>
+		<div class="w-1/3 p-2">
+			<div class="text-gray-700 text-center bg-gray-400 p-2">4</div>
+		</div>
+		<div class="w-1/3 p-2">
+			<div class="text-gray-700 text-center bg-gray-400 p-2">5</div>
+		</div>
+	</div>
+
 
 	<div>音楽:<a href="https://maou.audio/"> 魔王魂</a></div>
 </body>
