--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/tailwind/tailwind.css">
-	<title>おれのp5.js</title>
+	<title>おれのp5.js + TypeScript</title>
 </head>
 
 <body>
