--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,11 @@
 				<a href="./04_ellipse_kuso_1.html">グラデーションカラーの図形がカオスに回転し続けるアニメーション(ほぼ人のぱくり) 1</a>
 			</div>
 		</div>
+		<div class="w-1/3 p-2">
+			<div class="text-gray-700 text-center bg-gray-400 p-2">
+				<a href="./05_mandelbrot_1.html">マンデルブロ集合 1</a>
+			</div>
+		</div>
 	</div>
 
 
