--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,11 @@
 				<a href="./05_mandelbrot_1.html">マンデルブロ集合 1</a>
 			</div>
 		</div>
+		<div class="w-1/3 p-2">
+			<div class="text-gray-700 text-center bg-gray-400 p-2">
+				<a href="./06_teachable_machine_1.html">Teachable Machine 1</a>
+			</div>
+		</div>
 	</div>
 
 
